--- a/news_app/index.html
+++ b/news_app/index.html
@@ -6,10 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Document</title>
     <!-- Compiled and minified CSS -->
-    <link
-      href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
 
     <link
       rel="stylesheet"
@@ -33,27 +30,18 @@
                   <span class="card-title">Search news</span>
                   <div class="input-field">
                     <select name="country" id="country">
-                      <option value="ua">Ukraine</option>
+                      <option value="ru">Russia</option>
                       <option value="us">United States</option>
                     </select>
                     <label>Choose your country</label>
                   </div>
                   <div class="input-field">
-                    <input
-                      type="text"
-                      id="autocomplete-input"
-                      class="autocomplete"
-                      name="search"
-                    />
+                    <input type="text" id="autocomplete-input" class="autocomplete" name="search" />
                     <label for="autocomplete-input">Search</label>
                   </div>
                 </div>
                 <div class="card-action">
-                  <button
-                    class="btn waves-effect waves-light"
-                    type="submit"
-                    name="action"
-                  >
+                  <button class="btn waves-effect waves-light" type="submit" name="action">
                     Search
                     <i class="material-icons right">search</i>
                   </button>
