--- a/avia_tickets/src/index.html
+++ b/avia_tickets/src/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
-
     <title>Avia Tickets</title>
   </head>
   <body>
@@ -38,35 +37,19 @@
                 <div class="card-content">
                   <span class="card-title">Card Title</span>
                   <div class="input-field">
-                    <input
-                      type="text"
-                      id="autocomplete-origin"
-                      class="autocomplete"
-                    />
+                    <input type="text" id="autocomplete-origin" class="autocomplete" />
                     <label for="autocomplete-origin">Origin</label>
                   </div>
                   <div class="input-field">
-                    <input
-                      type="text"
-                      id="autocomplete-destination"
-                      class="autocomplete"
-                    />
+                    <input type="text" id="autocomplete-destination" class="autocomplete" />
                     <label for="autocomplete-destination">Destination</label>
                   </div>
                   <div class="input-field">
-                    <input
-                      type="text"
-                      class="datepicker"
-                      id="datepicker-depart"
-                    />
+                    <input type="text" class="datepicker" id="datepicker-depart" />
                     <label for="datepicker-depart">Depart date</label>
                   </div>
                   <div class="input-field">
-                    <input
-                      type="text"
-                      class="datepicker"
-                      id="datepicker-return"
-                    />
+                    <input type="text" class="datepicker" id="datepicker-return" />
                     <label for="datepicker-return">Return date</label>
                   </div>
                 </div>
@@ -97,19 +80,12 @@
     <div class="tickets-sections">
       <div class="container">
         <div class="row">
-          <div class="tickets-empty-res-msg">
-            По вашему запросу билетов не найдено.
-          </div>
+          <div class="tickets-empty-res-msg">По вашему запросу билетов не найдено.</div>
           <div class="col s12 m6">
             <div class="card ticket-card">
               <div class="ticket-airline d-flex align-items-center">
-                <img
-                  src="http://pics.avs.io/200/200/PS.png"
-                  class="ticket-airline-img"
-                />
-                <span class="ticket-airline-name"
-                  >Ukraine International airlines</span
-                >
+                <img src="http://pics.avs.io/200/200/PS.png" class="ticket-airline-img" />
+                <span class="ticket-airline-name">Ukraine International airlines</span>
               </div>
               <div class="ticket-destination d-flex align-items-center">
                 <div class="d-flex align-items-center mr-auto">
